# DigitizerTester

./: README.md  makefile
src/: CMakeLists.txt  main.cpp
src/Digitizer/: Vx1730Digitizer.cpp  Vx1730Digitizer.h
